Fix alignment

--- a/docs/src/components/Code.css
+++ b/docs/src/components/Code.css
@@ -3,7 +3,8 @@
     letter-spacing: normal;
     color: var(--color-blue);
 
-    p &[data-inline] {
+    p &[data-inline],
+    li &[data-inline] {
       letter-spacing: -0.01em;
       word-spacing: -0.2em;
       line-height: normal;
@@ -29,6 +30,10 @@
           text-decoration-color: currentColor;
         }
       }
+    }
+
+    .Link & {
+      text-decoration: inherit;
     }
   }
 }
