--- a/docs/src/css/syntax.css
+++ b/docs/src/css/syntax.css
@@ -255,6 +255,7 @@
   }
 
   .MdCode[data-inline]:not(:has(> .di-ht)) {
+    display: inline-block;
     background-color: var(--color-line-highlight);
     border-radius: var(--radius-3);
     padding: 0.05em 0.2em;
